[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Interface/Game-interface/Weapon-icons.png" type="Texture" id=1]
[ext_resource path="res://Scenes_and_scripts/Interfaces/Interface.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Interface/Game-interface/Clock_icon.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Interface/Game-interface/Enemy-icon.png" type="Texture" id=5]
[ext_resource path="res://Scenes_and_scripts/Interfaces/Powerup/PowerupBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Interface/Game-interface/Dash-icon.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Interface/Game-interface/Pistol-power-icon.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Top_right_interface" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -251.0
margin_right = -1.0
margin_bottom = 144.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_container" type="Control" parent="Top_right_interface"]
anchor_right = 1.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time_box" type="Control" parent="Top_right_interface/Top_container"]
anchor_bottom = 1.0
margin_left = 19.0
margin_right = 119.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time_icon" type="Sprite" parent="Top_right_interface/Top_container/Time_box"]
position = Vector2( 16, 24 )
texture = ExtResource( 4 )

[node name="Time_label" type="Label" parent="Top_right_interface/Top_container/Time_box"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -9.5
margin_bottom = 9.5
custom_fonts/font = SubResource( 1 )
text = "00:00:00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy_box" type="Control" parent="Top_right_interface/Top_container"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 21.0
margin_top = -1.44545
margin_right = 127.0
margin_bottom = -1.44545
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy_icon" type="Sprite" parent="Top_right_interface/Top_container/Enemy_box"]
position = Vector2( 17, 19 )
texture = ExtResource( 5 )

[node name="Enemy_label" type="Label" parent="Top_right_interface/Top_container/Enemy_box"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 39.0
margin_top = -9.0
margin_right = -2.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center_container" type="Control" parent="Top_right_interface"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -24.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money_label" type="Label" parent="Top_right_interface/Center_container"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -94.0
margin_top = -18.0
margin_right = 36.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_status_box" type="Control" parent="Top_right_interface/Center_container"]
anchor_right = 1.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="Top_right_interface/Center_container/Player_status_box"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -7.0
margin_right = 246.001
margin_bottom = 7.0
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthInfo" type="Label" parent="Top_right_interface/Center_container/Player_status_box/HealthBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Top_right_interface/Center_container/Player_status_box/HealthBar"]
margin_left = -21.3565
margin_top = 1.0139
margin_right = 18.6435
margin_bottom = 15.0139
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon_status_box" type="Control" parent="Top_right_interface/Center_container"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current_weapon" type="Sprite" parent="Top_right_interface/Center_container/Weapon_status_box"]
position = Vector2( 179.568, 9.87041 )
texture = ExtResource( 1 )
hframes = 3

[node name="Ammo_info" type="Label" parent="Top_right_interface/Center_container/Weapon_status_box"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -48.6255
margin_top = -7.0
margin_right = -8.62549
margin_bottom = 7.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom_container" type="Control" parent="Top_right_interface"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.296447
margin_top = -48.0
margin_right = -0.296448
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom_interface" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -49.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left_interface" type="GridContainer" parent="Bottom_interface"]
anchor_bottom = 1.0
margin_left = 13.0
margin_top = -29.0
margin_right = 159.0
margin_bottom = -11.0
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DashBox" parent="Bottom_interface/Left_interface" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 68.0
margin_bottom = 68.0

[node name="Icon" parent="Bottom_interface/Left_interface/DashBox" index="1"]
texture = ExtResource( 7 )

[node name="Weapon_power_box" parent="Bottom_interface/Left_interface" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 78.0
margin_top = 0.0
margin_right = 146.0
margin_bottom = 68.0

[node name="Icon" parent="Bottom_interface/Left_interface/Weapon_power_box" index="1"]
texture = ExtResource( 8 )

[node name="ReloadBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.5
margin_top = -50.5
margin_right = 63.5
margin_bottom = -33.5
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ReloadBar"]
margin_left = 30.0626
margin_top = 1.66455
margin_right = 104.063
margin_bottom = 15.6646
text = "Reloading..."
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="Bottom_interface/Left_interface/DashBox"]
[editable path="Bottom_interface/Left_interface/Weapon_power_box"]
